Multishot multiplied with number of attacks on weapon